Quick fix for multiple scrollbars

--- a/main2.css
+++ b/main2.css
@@ -97,7 +97,7 @@
     top: 100%;
     transform: translateY(-100%);
     max-height: 100%;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 #chat-display {
@@ -111,6 +111,7 @@
 	background-color: transparent;
 	border-color: transparent;
     vertical-align: bottom;
+    overflow: hidden;
 }
 
 .wordwrap { 
